fix: demo 're-random' button too small

--- a/home/components/Demo/demos/celeb.style.module.scss
+++ b/home/components/Demo/demos/celeb.style.module.scss
@@ -49,6 +49,7 @@
 .rerandomBtn {
   padding: 5px 10px;
   color: $bgColor;
+  font-size: 14px;
   background: #63341a;
   border: none;
   border-radius: 0;
